[gd_scene load_steps=2 format=3]
[ext_resource type="Script" path="res://scripts/ui/trade_panel.gd" id="1"]

[node name="TradePanel" type="Panel"]
visible = false
offset_left = 20.0
offset_top = 80.0
offset_right = 880.0
offset_bottom = 680.0
script = ExtResource("1")

[node name="HBoxMain" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 12.0
offset_right = -12.0
offset_bottom = -12.0

[node name="LeftPanel" type="VBoxContainer" parent="HBoxMain"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="Title" type="Label" parent="HBoxMain/LeftPanel"]
layout_mode = 2
text = "Market Prices"
theme_type_variation = "HeaderLarge"

[node name="AutoRefreshToggle" type="CheckButton" parent="HBoxMain/LeftPanel"]
layout_mode = 2
text = "Auto-refresh Prices"

[node name="HSeparator" type="HSeparator" parent="HBoxMain/LeftPanel"]
layout_mode = 2

[node name="GoodsContainer" type="VBoxContainer" parent="HBoxMain/LeftPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="RightPanel" type="VBoxContainer" parent="HBoxMain"]
layout_mode = 2
size_flags_horizontal = 3

[node name="InventoryTitle" type="Label" parent="HBoxMain/RightPanel"]
layout_mode = 2
text = "Inventory"
theme_type_variation = "HeaderLarge"

[node name="InventoryValue" type="Label" parent="HBoxMain/RightPanel"]
layout_mode = 2
text = "Total Value: 0"

[node name="HSeparator2" type="HSeparator" parent="HBoxMain/RightPanel"]
layout_mode = 2

[node name="InventoryList" type="VBoxContainer" parent="HBoxMain/RightPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="HSeparator3" type="HSeparator" parent="HBoxMain/RightPanel"]
layout_mode = 2

[node name="TransactionTitle" type="Label" parent="HBoxMain/RightPanel"]
layout_mode = 2
text = "Transaction Log"

[node name="TransactionLog" type="RichTextLabel" parent="HBoxMain/RightPanel"]
layout_mode = 2
custom_minimum_size = Vector2(0, 150)
size_flags_vertical = 3
bbcode_enabled = true
scroll_following = true
